--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -550,28 +550,28 @@ limitations under the License. -->
   <string name="calc_invalid_args">Missing numbers.</string>
   <string name="calc_error_msg">Error at symbol \'%1$s\'.</string>
   <string name="calc_error_parsing_msg">Error parsing \'%1$s\'.</string>
-  <string name="calc_F1_code">// Calculate the percentage change from a to b\n\n// 2: a\n// 1: b\n//∆% = 100 * (b - a) / a\nover - swap / 100 *\n\n//round to two digits\nround\n\n// add \"∆% \" to the result\n\"∆% \" +</string>
+  <string name="calc_F1_code">// Calculate the percentage change\n// from a to b\n\n// 2: a\n// 1: b\n// ∆% = 100 * (b - a) / a\nover - swap / 100 *\n\n// round to two digits\nround2\n\n// add \"∆% \" to the result\n\"∆% \" +\n\n// perc is the built-in function for percentage change without rounding\n// 10 12 perc</string>
   <string name="calc_F1_desc">∆% .2</string>
-  <string name="calc_F2_code">// Mortgage Calculator\n// Monthly Payment\n\n// 3: Loan Amount\n// 2: Loan Term in Years\n// 1: Annual Interest Rate in %\n\n1200 / dup 1 + rot -12 * ^ 1 swap - / * round \"Monthly Payment \" +</string>
+  <string name="calc_F2_code">// Mortgage Calculator\n// Monthly Payment\n\n// 3: Loan Amount\n// 2: Loan Term in Years\n// 1: Annual Interest Rate in %\n\n1200 / dup 1 + rot -12 * ^ 1 swap - / * round2 \"Monthly Payment \" +</string>
   <string name="calc_F2_desc">Loan Payment</string>
-  <string name="calc_F3_code">// Mortgage Calculator\n// Loan Amount\n\n// 3: Monthly Payment\n// 2: Loan Term in Years\n// 1: Annual Interest Rate in %\n\n1200 / rot over / rot rot 1 + swap -12 * ^ 1 swap - * round \"Loan Amount \" +</string>
+  <string name="calc_F3_code">// Mortgage Calculator\n// Loan Amount\n\n// 3: Monthly Payment\n// 2: Loan Term in Years\n// 1: Annual Interest Rate in %\n\n1200 / rot over / rot rot 1 + swap -12 * ^ 1 swap - * round2 \"Loan Amount \" +</string>
   <string name="calc_F3_desc">Loan Amount</string>
-  <string name="calc_F4_code">// Mortgage Calculator\n// Loan Term in Years\n\n// 3: Loan Amount\n// 2: Monthly Payment\n// 1: Annual Interest Rate in %\n\n1200 / rot rot / over * 1 swap - ln swap 1 + ln / -12 / round \"Loan Term in Years \" +</string>
+  <string name="calc_F4_code">// Mortgage Calculator\n// Loan Term in Years\n\n// 3: Loan Amount\n// 2: Monthly Payment\n// 1: Annual Interest Rate in %\n\n1200 / rot rot / over * 1 swap - ln swap 1 + ln / -12 / round2 \"Loan Term in Years \" +</string>
   <string name="calc_F4_desc">Loan Term</string>
-  <string name="calc_F5_code">// Quadratic Equation\n// x²+ax+b\n\nswap -2 / dup dup * rot - sqrt over over + \"x₁=\" + rot rot - \"x₂=\" +</string>
+  <string name="calc_F5_code">// Quadratic Equation\n// x²+ax+b\n\nswap -2 / dup dup * rot - sqrt over over + \"x₁=\" + rot rot - \"x₂=\" +"</string>
   <string name="calc_F5_desc">x²+ax+b</string>
-  <string name="calc_F6_code">// $$ gets the stock price\n\n$$tsla\ndup 10000 swap / int \"For 10000 you can buy \" +</string>
-  <string name="calc_F6_desc">Stock price</string>
-  <string name="calc_F7_code"> // stock evaluation example\n\n$$tsla\n$$tsla.marketprice\n$$tsla.purchaseprice\n$$tsla.quantity\n$$tsla.marketchange\n$$tsla.marketchangepercent\n$$tsla.name\n$$tsla.currency\n$$tsla.annualdividendrate"</string>
-  <string name="calc_F7_desc">TSLA</string>
-  <string name="calc_F8_code">// if conditional example (aiaman)\n\n// 4: else part\n// 3: then part\n// 2: conditional op2\n// 1: conditional op1\n\n// if equal (op2 == op1)?\n// result is 4, not equal\n4 \"false \" + 3 \"true \" + 2 1 if.eq\n\n// if greater than (op2 \u003e op1)?\n// result is 3, greater than\n4 \"false \" + 3 \"true \" + 2 1 if.gt\n\n// if less than (op2 \u003c op1)?\n// result is 4, not less than\n4 \"false \" + 3 \"true \" + 2 1 if.lt</string>
-  <string name="calc_F8_desc">if example</string>
-  <string name="calc_F9_code">// Clear all\nclear\n\n// Variables\n// Store number in variable \u0027abc\u0027\n123 \"abc=\" + sto.abc\n\n// Read variable \u0027abc\u0027\nrcl.abc\n\n// Read all variables\nrcl\n\n// Stack\n// n pick\n1 2 3 4 4 pick \"Copy from 4:\" // 1 2 3 4 1\n\n// n roll\n1 2 3 4 4 roll \"Move from 4:\" // 2 3 4 1\n\n// Stack size\ndepth \"Elements=\" +\n\n// Statistics\n// var (Variance)\n// sum (Sum)</string>
-  <string name="calc_F9_desc">More examples</string>
-  <string name="calc_F10_code">clear</string>
-  <string name="calc_F10_desc">Clear all</string>
-  <string name="calc_F11_code"></string>
-  <string name="calc_F11_desc"></string>
+  <string name="calc_F6_code">// if conditional example (aiaman)\n\n// 4: else part\n// 3: then part\n// 2: conditional op2\n// 1: conditional op1\n\n// if equal (op2 == op1)?\n// result is 4, not equal\n4 \"false \" +\n3 \"true \" +\n2 1 if.eq\n\n// if greater than (op2 \u003e op1)?\n// result is 3, greater than\n4 \"false \" +\n3 \"true \" +\n2 1 if.gt\n\n// if less than (op2 \u003c op1)?\n// result is 4, not less than\n4 \"false \"\n+ 3 \"true \"\n+ 2 1 if.lt</string>
+  <string name="calc_F6_desc">if example</string>
+  <string name="calc_F7_code">// Loop example\n\n\"10..1 -1\"\n10\ndo.decrLabel\n dup 1 - dup 1\nwhile.ge.decrLabel\ndrop\n\n\"1..10 +1\"\n1\ndo.incrLabel\n dup 1 + dup 10\nwhile.le.incrLabel\ndrop\n\n\"0..360 +22,5\"\n0\ndo.f(x)\n dup\n // f(x)\n sin\n // \"sin(x)=\"\n \"sin(\" 3 pick toStr + + \")=\" +\n // \u003c= 360 ?\n swap 22,5 + dup 360\nwhile.le.f(x)\ndrop\n\n// goto Beispiel\n// Überspringe 1234\ngoto.end\n1234\n.end</string>
+  <string name="calc_F7_desc">while example</string>
+  <string name="calc_F8_code">// Clear all\nclear\n\n// Variables\n// Store number in variable \u0027abc\u0027\n123 \"abc=\" + sto.abc\n// Store result in variable \u0027x\u0027\n2 e * π ^ sqrt \"x=\" + sto.x\n\n// Read variable \u0027abc\u0027\nrcl.abc\n\n// Read all variables\nrcl\n\n// Decimal number to fraction (x/y)\n0,75 frac // 3/4\n0,40476190476 frac // 17/42\n\n// Stack\n// n pick\n1 2 3 4 4 pick \"Copy from 4:\" // 1 2 3 4 1\n\n// n roll\n1 2 3 4 4 roll \"Move from 4:\" // 2 3 4 1\n\n// Stack size\ndepth \"Elements=\" +\n\n// Statistics\n// var (Variance)\n// sum (Sum)</string>
+  <string name="calc_F8_desc">More examples</string>
+  <string name="calc_F9_code">clear</string>
+  <string name="calc_F9_desc">Clear all</string>
+  <string name="calc_F10_code">// Stock purchase example\n\n// 1: Money\n\n\"Enter an amount of money\"\n1 // One number expected\nvalidate\n\n// round to two digits\nround2\n\n// Select stock\n$$tsla\n\n// else part\n\"Select a stock from your portfolio\"\n\n// then part\nover 4 pick swap / int \"For $\" 5 roll toStr + \" you get \" + +\n\n// if\n// Doe sthe stock exist?\n3 pick 0 if.gt // Stock \u003e 0 ?</string>
+  <string name="calc_F10_desc">Stock purchase</string>
+  <string name="calc_F11_code">// stock evaluation example\n\n$$tsla\n$$tsla.marketprice\n$$tsla.purchaseprice\n$$tsla.quantity\n$$tsla.marketchange\n$$tsla.marketchangepercent\n$$tsla.name\n$$tsla.currency\n$$tsla.annualdividendrate</string>
+  <string name="calc_F11_desc">TSLA</string>
   <string name="calc_F12_code"></string>
   <string name="calc_F12_desc"></string>
   <string name="calc_F13_code"></string>
