--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -582,7 +582,10 @@ limitations under the License. -->
   <string name="calc_F16_code"></string>
   <string name="calc_F16_desc"></string>
   <string name="calc_endless_loop">Mögliche Endlosschleife. Vorgang abgebrochen.</string>
-  <string name="calc_missing_label">Fehlende Marke \'%1$s\'</string>
+  <string name="calc_missing_label">Fehlende Marke \'.%1$s\'.</string>
+  <string name="calc_missing_while_label">Fehlende while-Marke \'do.%1$s\'.</string>
+  <string name="calc_duplicate_label">Marke \'.%1$s\' darf nur einmal verwendet werden.</string>
+  <string name="calc_duplicate_while_label">while-Marke \'.%1$s\' darf nur einmal verwendet werden.</string>
   <string name="calc_invalid_while_args">Fehlende Zahlen für \'while\'.</string>
   <string name="calc_unknown_while_condition">Unbekannte while-Bedingung \'%1$s\'. Verwende while.[eq ge gt le lt].</string>
 </resources>
