--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -538,7 +538,7 @@ limitations under the License. -->
   <string name="calc_F5_desc">x²+ax+b</string>
   <string name="calc_F6_code">// if conditional example (aiaman)\n\n// 4: else part\n// 3: then part\n// 2: conditional op2\n// 1: conditional op1\n\n// if equal (op2 == op1)?\n// result is 4, not equal\n4 \"false \" +\n3 \"true \" +\n2 1 if.eq\n\n// if greater than (op2 \u003e op1)?\n// result is 3, greater than\n4 \"false \" +\n3 \"true \" +\n2 1 if.gt\n\n// if less than (op2 \u003c op1)?\n// result is 4, not less than\n4 \"false \"\n+ 3 \"true \"\n+ 2 1 if.lt</string>
   <string name="calc_F6_desc">if example</string>
-  <string name="calc_F7_code">// Loop example\n\n\"10..1 -1\"\n10\ndo.decrLabel\n dup 1 - dup 1\nwhile.ge.decrLabel\ndrop\n\n\"1..10 +1\"\n1\ndo.incrLabel\n dup 1 + dup 10\nwhile.le.incrLabel\ndrop\n\n\"0..360 +22,5\"\n0\ndo.f(x)\n dup\n // f(x)\n sin\n // \"sin(x)=\"\n \"sin(\" 3 pick toStr + + \")=\" +\n // \u003c= 360 ?\n swap 22,5 + dup 360\nwhile.le.f(x)\ndrop\n\n// goto Beispiel\n// Überspringe 1234\ngoto.end\n1234\n.end</string>
+  <string name="calc_F7_code">// Loop example\n\n\"10..1 -1\"\n10\ndo.decrLabel\n  dup 1 - dup 1\nwhile.ge.decrLabel\ndrop\n\n\"1..10 +1\"\n1\ndo.incrLabel\n  dup 1 + dup 10\nwhile.le.incrLabel\ndrop\n\n\"0..360 +22,5\"\n0\ndo.f(x)\n  dup\n    // f(x)\n    sin\n  // \"sin(x)\=\"\n  \"sin(\" 3 pick toStr + + \")=\" +\n  // \u003c= 360 ?\n  swap 22,5 + dup 360\nwhile.le.f(x)\ndrop\n\n// goto example\n// Skip 1234\ngoto.end\n1234\n.end</string>
   <string name="calc_F7_desc">while example</string>
   <string name="calc_F8_code">// Clear all\nclear\n\n// Variables\n// Store number in variable \u0027abc\u0027\n123 \"abc=\" + sto.abc\n// Store result in variable \u0027x\u0027\n2 e * π ^ sqrt \"x=\" + sto.x\n\n// Read variable \u0027abc\u0027\nrcl.abc\n\n// Read all variables\nrcl\n\n// Decimal number to fraction (x/y)\n0,75 frac // 3/4\n0,40476190476 frac // 17/42\n\n// Stack\n// n pick\n1 2 3 4 4 pick \"Copy from 4:\" // 1 2 3 4 1\n\n// n roll\n1 2 3 4 4 roll \"Move from 4:\" // 2 3 4 1\n\n// Stack size\ndepth \"Elements=\" +\n\n// Statistics\n// var (Variance)\n// sum (Sum)</string>
   <string name="calc_F8_desc">More examples</string>
@@ -548,8 +548,8 @@ limitations under the License. -->
   <string name="calc_F10_desc">Stock purchase</string>
   <string name="calc_F11_code">// stock evaluation example\n\n$$tsla\n$$tsla.marketprice\n$$tsla.purchaseprice\n$$tsla.quantity\n$$tsla.marketchange\n$$tsla.marketchangepercent\n$$tsla.name\n$$tsla.currency\n$$tsla.annualdividendrate</string>
   <string name="calc_F11_desc">TSLA</string>
-  <string name="calc_F12_code"></string>
-  <string name="calc_F12_desc"></string>
+  <string name="calc_F12_code">// Numeric Integration of f(x)\n\n//         ₄\n// example ∫x²dx\n//         ¹\n\n1 // start\n4 sto.x2 // end\n\n0,001 sto.dx // precision\n\n0\ndo.∫x²\n  over\n    // f(x)\n    sq // x²\n  + swap rcl.dx + swap over rcl.x2\nwhile.lt.∫x²\nswap drop rcl.dx * \"∫f(x)dx=\" +\n\n\n// 2nd example ∫sin(x)dx from 0..π\n\n0 // start\nπ sto.x2 // end\n\nπ 100 / sto.dx // precision\n\n0\ndo.sin // new do-while label\n  over\n    // f(x)\n    sin\n  + swap rcl.dx + swap over rcl.x2\nwhile.lt.sin\nswap drop rcl.dx * \"∫f(x)dx=\" +\n\n\n// disable endloss loop check\n:loop</string>
+  <string name="calc_F12_desc">∫f(x)dx</string>
   <string name="calc_F13_code"></string>
   <string name="calc_F13_desc"></string>
   <string name="calc_F14_code"></string>
