--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -571,6 +571,7 @@ limitations under the License. -->
   <string name="calc_incomplete_definition">Incomplete function definition \'%1$s\'.</string>
   <string name="calc_definition_entry_exists">Function definition already exist \'%1$s\'.</string>
   <string name="calc_definition_is_keyword">Function definition name \'%1$s\' must not be a key word.</string>
+  <string name="calc_unknown_import">\'import."%1$s"\' does not exist.</string>
   <string-array name="predefined_groups">
     <item>Buy</item>
     <item>Sell</item>
