--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -573,6 +573,8 @@ limitations under the License. -->
   <string name="calc_definition_is_keyword">Function definition name \'%1$s\' must not be a key word.</string>
   <string name="calc_unknown_import">\'%1$s\' does not exist.</string>
   <string name="calc_multiple_imports">\'%1$s\' is defined more than once.</string>
+  <string name="calc_missing_lambda">The command \'()\' expects a function.</string>
+  <string name="calc_lambda_not_terminated">Missing closing \'}\'.</string>
   <string-array name="predefined_groups">
     <item>Buy</item>
     <item>Sell</item>
