--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -575,6 +575,7 @@ limitations under the License. -->
   <string name="calc_multiple_imports">\'%1$s\' is defined more than once.</string>
   <string name="calc_missing_lambda">The command \'()\' expects a function.</string>
   <string name="calc_lambda_not_terminated">Missing closing \'}\'.</string>
+  <string name="calc_empty_definition">Function definition must not be empty.</string>
   <string-array name="predefined_groups">
     <item>Buy</item>
     <item>Sell</item>
