--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -531,7 +531,7 @@ limitations under the License. -->
   <string name="calc_format_display_group_separator">Gruppentrenner anzeigen</string>
   <string name="calc_format_display_group_separator_desc">Zeigt den Tausender-Gruppentrenner für die Zahl an. Zum Beispiel 1.234.567</string>
   <string name="system_header">System</string>
-  <string name="calc_stocks">Aktien</string>
+  <string name="calc_stocks">Wertpapiere</string>
   <string name="clipboard">Zwischenablage=</string>
   <string name="calc_headline">AI</string>
   <string name="calc_prog_headline">AI prog</string>
