--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -607,4 +607,5 @@ limitations under the License. -->
   <string name="new_account">Neuer Kontoname</string>
   <string name="account_name_not_empty">Geben Sie einen Kontonamen ein.</string>
   <string name="account_name_used">Das Konto \'%1$s\' wird bereits verwendet.</string>
+  <string name="no_accounts_available">Kein Konto verfügbar.</string>
 </resources>
