--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -585,7 +585,7 @@ limitations under the License. -->
   <string name="account_name_not_empty">Enter an account name.</string>
   <string name="account_name_used">The account \'%1$s\' is already used.</string>
   <string name="no_accounts_available">No account available.</string>
-  <string name="rename_account_desc">Rename an account.</string>
+  <string name="rename_account_desc">Rename a stock account.</string>
   <string-array name="predefined_groups">
     <item>Buy</item>
     <item>Sell</item>
